Removed one-jar

--- a/build.xml
+++ b/build.xml
@@ -5,7 +5,6 @@
 	<property name="src" location="src" />
 	<property name="tests" location="tests" />
 	<property name="lib" location="lib" />
-	<property name="lib-ant" location="lib-ant" />
 
 	<property name="testbox.jar" location="testbox.jar" />
 	
@@ -21,20 +20,7 @@
 		<fileset dir="${lib-ant}" includes="**/*.jar" />
 	</path>
 
-	<taskdef name="one-jar" classname="com.simontuffs.onejar.ant.OneJarTask" classpathref="ant.libs" />
-
-    <fail message="Unsupported Java version: ${java.version}. Make sure that the version of the Java compiler is 1.6"> 
-        <condition> 
-            <not> 
-                <or> 
-                    <contains string="${java.version}" substring="1.6" casesensitive="false" /> 
-                    <contains string="${java.version}" substring="1.7" casesensitive="false" /> 
-                </or> 
-            </not> 
-        </condition> 
-    </fail> 
-
-	<target name="all" depends="compile,jar" />
+	<target name="all" depends="compile" />
 
 	<target name="clean">
         <delete dir="${bin}" failonerror="true" />
@@ -56,32 +42,6 @@
 			<src path="${src}" />
 			<src path="${tests}" />
 		</javac>
-	</target>
-
-	<target name="jar" depends="compile">
-		<fail message="Selenium JAR ${lib}/${selenium-server.jar} not found">
-			<condition>
-				<not>
-					<available file="${lib}/${selenium-server.jar}"/>
-				</not>
-			</condition>
-		</fail>
-		<one-jar destfile="${testbox.jar}">
-			<manifest>
-				<attribute name="One-Jar-Main-Class" value="ru.odnoklassniki.tests.runner.Testbox" />
-				<attribute name="Class-Path" value="${selenium-server.jar}" />
-			</manifest>
-			<main>
-				<fileset dir="${bin}" />
-			</main>
-			<lib>
-				<fileset file="${lib}/*.jar" excludes="${selenium-server.jar}" />
-			</lib>
-			<!-- Put META-INF on the top otherwise TEstNG can't find it -->
-			<fileset dir="${src}">
-				<include name="META-INF/**" />
-			</fileset>
-		</one-jar>
 	</target>
 
 </project>
