--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,5 @@
+#Wed May 21 20:25:00 MSK 2014
 eclipse.preferences.version=1
 encoding//src/ru/odnoklassniki/tests/ui/api/locale/en.properties=UTF-8
 encoding//src/ru/odnoklassniki/tests/ui/api/locale/ru.properties=UTF-8
+encoding/<project>=UTF-8
